Version 0.1.8
--------------------------------------

* Fixed UK Office of National Statistics (ONS) functionality. Note that the pdfetch_ONS function is designed to retrieve series from the ONS Time Series Explorer (https://www.ons.gov.uk/timeseriestool), not the UK ONS API.
* Fixed INSEE functionality.
* Fixed EIA functionality.
* Various other fixes

Version 0.1.7
--------------------------------------

* Fixed URL for St Louis FRED service.

Version 0.1.6
--------------------------------------

* Added support for US Energy Information Administration API
* Wrapped examples with tryCatch to stop temporary web service problems from being flagged on CRAN.
* Switched from using RCurl directly to the httr package.

Version 0.1.5
--------------------------------------

* Fixed a bug in the handling of ECB monthly dates (thanks to Fabian Greimel)

Version 0.1.4
--------------------------------------

* Fixed a bug in the handling of Eurostat monthly dates (thanks to Chiara Carini)

Version 0.1.3
--------------------------------------

* Added support for US Bureau of Labor Statistics, UK ONS, and French INSEE

Version 0.1.2
--------------------------------------

* Added support for Bank of England's Interactive Statistical Database

Version 0.1.1
--------------------------------------

* Removed reliance on curl.exe on Windows

Version 0.1
--------------------------------------

* Initial release