@@ -23,10 +23,9 @@ Eurostat stores its statistics in data cubes, which can be browsed at
 \url{http://ec.europa.eu/eurostat/data/database}. To access data, specify the name of a data cube and optionally filter it based on its dimensions.
 }
 \examples{
-tryCatch(pdfetch_EUROSTAT("namq_gdp_c", FREQ="Q", S_ADJ="SWDA", UNIT="MIO_EUR", 
-                          INDIC_NA="B1GM", GEO=c("DE","UK")),
-         error = function(e) {},
-         warning = function(w) {}
-)
+\dontrun{
+pdfetch_EUROSTAT("namq_gdp_c", FREQ="Q", S_ADJ="SWDA", UNIT="MIO_EUR", 
+                          INDIC_NA="B1GM", GEO=c("DE","UK"))
+}
 }
 
